--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-    "name": "module-18-project",
-    "version": "1.0.0",
-    "description": "",
-    "main": "assets/js/script.js",
-    "scripts": {
-        "webpack": "webpack --watch",
-        "build": "webpack",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "file-loader": "^6.2.0",
-        "webpack": "^4.43.0",
-        "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^3.3.11"
-    },
-    "dependencies": {
-        "bootstrap": "^4.3.1",
-        "image-webpack-loader": "^8.1.0",
-        "jquery": "^3.4.1",
-        "popper.js": "^1.16.0"
-    }
+  "name": "module-18-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "assets/js/script.js",
+  "scripts": {
+    "webpack": "webpack --watch",
+    "start:dev": "webpack-dev-server",
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@webpack-cli/serve": "^1.6.1",
+    "file-loader": "^6.2.0",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "image-webpack-loader": "^8.1.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
+  }
 }
